# i8080-sim

./: CMakeLists.txt  compile.sh  gtk-win.glade~  main.c  main.cpp
asm/: fib.s  fib.s.hex  foo.s  foo.s.hex
cli/: README.md  main.c
core/: hex.c  hex.h  i8080_asm.c  i8080_asm.h  i8080_state.c  i8080_state.h
glade/: window_main.glade
ui/: ui_utils.c  ui_utils.h
